--- a/tags.html
+++ b/tags.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
         <meta charset="utf-8" />
-        <title>ancewer的个人博客 - Tags</title>
+        <title>ancewer' blog - Tags</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
 
         <!--[if IE]>
@@ -15,7 +15,7 @@
 <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" />
 </a>
         <header id="banner" class="body">
-                <h1><a href="/">ancewer的个人博客 </a></h1>
+                <h1><a href="/">ancewer' blog </a></h1>
                 <nav><ul>
                     <li><a href="/category/c.html">C++</a></li>
                     <li><a href="/category/csharp.html">Csharp</a></li>
@@ -24,7 +24,7 @@
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Tags for ancewer的个人博客</h1>
+    <h1>Tags for ancewer' blog</h1>
     <ul>
         <li><a href="/tag/pelican.html">pelican</a> (6)</li>
         <li><a href="/tag/python.html">python</a> (6)</li>
