--- a/archives.html
+++ b/archives.html
@@ -44,18 +44,17 @@
                 <div class="blogroll">
                         <h2>links</h2>
                         <ul>
-                            <li><a href="http://getpelican.com/">Pelican</a></li>
-                            <li><a href="http://python.org/">Python.org</a></li>
-                            <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
-                            <li><a href="#">You can modify those links in your config file</a></li>
+                            <li><a href="http://www.cqu.edu.cn/">重庆大学</a></li>
+                            <li><a href="http://www.ustc.edu.cn/">中国科学技术大学</a></li>
+                            <li><a href="http://crmp.ustc.edu.cn/">中国科学技术大学放射医学物理中心</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
                         <h2>social</h2>
                         <ul>
 
-                            <li><a href="#">You can add links in your config file</a></li>
-                            <li><a href="#">Another social link</a></li>
+                            <li><a href="ancewer@mail.ustc.edu.cn">Email</a></li>
+                            <li><a href="1174133665">QQ</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
