--- a/tags.html
+++ b/tags.html
@@ -37,15 +37,16 @@
                         <ul>
                             <li><a href="http://www.cqu.edu.cn/">重庆大学</a></li>
                             <li><a href="http://www.ustc.edu.cn/">中国科学技术大学</a></li>
-                            <li><a href="http://crmp.ustc.edu.cn/">中国科学技术大学放射医学物理中心</a></li>
+                            <li><a href="http://www.snst.ustc.edu.cn/">中国科大核科学技术学院</a></li>
+                            <li><a href="http://crmp.ustc.edu.cn/">中国科大放射医学物理中心</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
                         <h2>social</h2>
                         <ul>
 
-                            <li><a href="ancewer@mail.ustc.edu.cn">Email</a></li>
-                            <li><a href="1174133665">QQ</a></li>
+                            <li><a href="#">Email:ancewer@mail.ustc.edu.cn</a></li>
+                            <li><a href="#">QQ:1174133665</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
