--- a/MainPage2.html
+++ b/MainPage2.html
@@ -19,6 +19,7 @@
                 <nav><ul>
                     <li class="active"><a href="/category/c.html">C++</a></li>
                     <li><a href="/category/csharp.html">Csharp</a></li>
+                    <li><a href="/category/misc.html">misc</a></li>
                     <li><a href="/category/python.html">Python</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -1068,14 +1069,6 @@ CompositionTarget.Redering 事件</p>
                             <li><a href="http://crmp.ustc.edu.cn/">中国科大放射医学物理中心</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
-                <div class="social">
-                        <h2>social</h2>
-                        <ul>
-
-                            <li><a href="#">Email:ancewer@mail.ustc.edu.cn</a></li>
-                            <li><a href="#">QQ:1174133665</a></li>
-                        </ul>
-                </div><!-- /.social -->
         </section><!-- /#extras -->
 
         <footer id="contentinfo" class="body">
