--- a/tags.html
+++ b/tags.html
@@ -19,6 +19,7 @@
                 <nav><ul>
                     <li><a href="/category/c.html">C++</a></li>
                     <li><a href="/category/csharp.html">Csharp</a></li>
+                    <li><a href="/category/misc.html">misc</a></li>
                     <li><a href="/category/python.html">Python</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -28,6 +29,8 @@
     <ul>
         <li><a href="/tag/pelican.html">pelican</a> (6)</li>
         <li><a href="/tag/python.html">python</a> (6)</li>
+        <li><a href="/tag/zhong-guo-ke-da.html">中国科大</a> (1)</li>
+        <li><a href="/tag/zhong-qing-da-xue.html">重庆大学</a> (1)</li>
     </ul>
 </section>
 
@@ -41,14 +44,6 @@
                             <li><a href="http://crmp.ustc.edu.cn/">中国科大放射医学物理中心</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
-                <div class="social">
-                        <h2>social</h2>
-                        <ul>
-
-                            <li><a href="#">Email:ancewer@mail.ustc.edu.cn</a></li>
-                            <li><a href="#">QQ:1174133665</a></li>
-                        </ul>
-                </div><!-- /.social -->
         </section><!-- /#extras -->
 
         <footer id="contentinfo" class="body">
