--- a/aboutme.html
+++ b/aboutme.html
@@ -17,9 +17,9 @@
         <header id="banner" class="body">
                 <h1><a href="/">ancewer' blog </a></h1>
                 <nav><ul>
+                    <li class="active"><a href="/category/aboutme.html">aboutme</a></li>
                     <li><a href="/category/c.html">C++</a></li>
                     <li><a href="/category/csharp.html">Csharp</a></li>
-                    <li class="active"><a href="/category/misc.html">misc</a></li>
                     <li><a href="/category/python.html">Python</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -44,7 +44,7 @@
         <address class="vcard author">
                 By                         <a class="url fn" href="/author/liu-chunbo.html">Liu Chunbo</a>
         </address>
-<p>In <a href="/category/misc.html">misc</a>.</p>
+<p>In <a href="/category/aboutme.html">aboutme</a>.</p>
 <p>tags: <a href="/tag/zhong-qing-da-xue.html">重庆大学</a> <a href="/tag/zhong-guo-ke-da.html">中国科大</a> </p>
 </footer><!-- /.post-info -->      <h1>About</h1>
 <p>这里是我自我介绍内容</p>
