--- a/archives.html
+++ b/archives.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <title>ancewer' blog</title>
+        <title>ancewer' Blog</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="/theme/css/main.css" type="text/css" />
-        <link href="/" type="application/atom+xml" rel="alternate" title="ancewer' blog ATOM Feed" />
+        <link href="/" type="application/atom+xml" rel="alternate" title="ancewer' Blog ATOM Feed" />
 
 
         <!--[if IE]>
@@ -24,13 +24,13 @@
 <img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" />
 </a>
         <header id="banner" class="body">
-                <h1><a href="">ancewer' blog </a></h1>
+                <h1><a href="">ancewer' Blog </a></h1>
                 <nav><ul>
                     <li ><a href="/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
-<h1>Archives for ancewer' blog</h1>
+<h1>Archives for ancewer' Blog</h1>
 
 <dl>
     <dt>2017-05-22</dt>
