--- a/archives.html
+++ b/archives.html
@@ -35,6 +35,8 @@
 <dl>
     <dt>2017-05-22</dt>
     <dd><a href='DCMTK in VS2015.html'>DCMTK in VS2015</a></dd>
+    <dt>2017-05-22</dt>
+    <dd><a href='DCMTK in VS20151.html'>DCMTK in VS2015</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
