--- a/archives.html
+++ b/archives.html
@@ -34,7 +34,7 @@
 
 <dl>
     <dt>2017-06-06</dt>
-    <dd><a href='About.html'>DCMTK in VS2015</a></dd>
+    <dd><a href='About.html'>人生苦短，贵在折腾！</a></dd>
     <dt>2017-05-22</dt>
     <dd><a href='DCMTK in VS2015.html'>DCMTK in VS2015</a></dd>
 </dl>
