--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </address>
 <p>In <a href="/category/misc.html">misc</a>. </p>
 <p>tags: <a href="/tag/jian-jie.html">简介</a></p></p>
-</footer><!-- /.post-info -->                <h1>Author：LiuChunbo Contact me : ancewer@mail.ustc.edu.cn</h1>
+</footer><!-- /.post-info -->                <h1>Author：LiuChunbo </h1>
 <ul>
 <li>这是我的个人博客，主要是一些专业相关的技术贴!</li>
 <li>本人也喜欢骑行，去中科大上学的第一年就是从家里骑去的，嘿嘿！<p/>
